force-app/main/default/objects/Account/fields/CloudQnect_MSA_Signatory__c.field-meta.xml
<CustomField>
    <fullName>CloudQnect_MSA_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CloudQnect MSA Signatory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>