force-app/main/default/objects/Account/fields/cogn__Cognism_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>cogn__Cognism_Timestamp__c</fullName>
    <label>Cognism Timestamp</label>
    <type>DateTime</type>
</CustomField>