force-app/main/default/objects/Account/fields/cogn__Matching_Keys__c.field-meta.xml
<CustomField>
    <fullName>cogn__Matching_Keys__c</fullName>
    <label>Matching Keys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>