force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Prime (White Label)</fullName>
            </value>
            <value>
                <fullName>Prime (Co Branding)</fullName>
            </value>
            <value>
                <fullName>Referring Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>