force-app/main/default/objects/Account/fields/is_Company_Changed__c.field-meta.xml
<CustomField>
    <fullName>is_Company_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Company Changed</label>
    <type>Checkbox</type>
</CustomField>