force-app/main/default/objects/Account/fields/is_Stale__c.field-meta.xml
<CustomField>
    <fullName>is_Stale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Stale</label>
    <type>Checkbox</type>
</CustomField>