force-app/main/default/objects/Account/fields/Last_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_Date__c</fullName>
    <label>Last Event Date</label>
    <type>Date</type>
</CustomField>