force-app/main/default/objects/Account/fields/MSA_Fully_Executed__c.field-meta.xml
<CustomField>
    <fullName>MSA_Fully_Executed__c</fullName>
    <label>MSA Fully Executed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>