force-app/main/default/objects/Account/fields/Opp_Identified__c.field-meta.xml
<CustomField>
    <fullName>Opp_Identified__c</fullName>
    <label>Opp Identified</label>
    <type>Date</type>
</CustomField>