force-app/main/default/objects/Account/fields/SOW_Counter__c.field-meta.xml
<CustomField>
    <fullName>SOW_Counter__c</fullName>
    <label>SOW Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>