force-app/main/default/objects/Account/fields/SOW_Number__c.field-meta.xml
<CustomField>
    <fullName>SOW_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This counter provides a unique sequential number for each opportunity with a client</description>
    <label>SOW Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>