force-app/main/default/objects/Account/fields/Top_Target__c.field-meta.xml
<CustomField>
    <fullName>Top_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>An Account Designated as a Top Target</inlineHelpText>
    <label>Top Target</label>
    <type>Checkbox</type>
</CustomField>