force-app/main/default/objects/Account/listViews/cogn__matching_keys.listView-meta.xml
<ListView>
    <fullName>cogn__matching_keys</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>cogn__Matching_Keys__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cogn__Matching_Keys__c</field>
        <operation>equals</operation>
    </filters>
    <label>Cognism Account Match Keys</label>
</ListView>